--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="src/RXTXcomm.jar"/>
-	<classpathentry kind="lib" path="src/raspberry/gui/librxtxSerial.jnilib"/>
-	<classpathentry kind="lib" path="src/raspberry/gui/rxtxSerial.dll"/>
+	<classpathentry kind="lib" path="src/raspberry/gui/RXTXcomm.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
